--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "version": "1.0.0",
   "description": "Replace UUIDs in your JSON files",
   "main": "dist/index.js",
+  "bin": {
+    "cloak": "dist/cli.js"
+  },
   "repository": "https://github.com/Ilya-Meer/json-cloak.git",
   "author": "Ilya Meerovich <ilya.meerov@gmail.com>",
   "license": "MIT",
-  "dependencies": {},
   "devDependencies": {
+    "@types/jest": "^29.5.3",
+    "@types/minimist": "^1.2.2",
     "@types/node": "^20.4.5",
+    "@types/uuid": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "^6.2.0",
     "@typescript-eslint/parser": "^6.2.0",
     "eslint": "^8.46.0",
@@ -16,12 +21,19 @@
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
     "eslint-plugin-promise": "^6.0.0",
+    "jest": "^29.6.2",
+    "ts-jest": "^29.1.1",
     "typescript": "^5.1.6"
   },
   "scripts": {
     "build": "tsc",
     "typecheck": "tsc --noEmit",
     "lint": "eslint . --ext ts --report-unused-disable-directives --max-warnings 0",
-    "lint:fix": "eslint --fix ."
+    "lint:fix": "eslint --fix .",
+    "test": "NODE_ENV=test jest --coverage"
+  },
+  "dependencies": {
+    "minimist": "^1.2.8",
+    "uuid": "^9.0.0"
   }
 }
