--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
   "author": "Ilya Meerovich <ilya.meerov@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "@types/jest": "^29.5.3",
     "@types/minimist": "^1.2.2",
     "@types/node": "^20.4.5",
     "@types/uuid": "^9.0.2",
@@ -29,16 +28,15 @@
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
     "eslint-plugin-promise": "^6.0.0",
-    "jest": "^29.6.2",
-    "ts-jest": "^29.1.1",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "vitest": "^0.34.3"
   },
   "scripts": {
     "build": "tsc",
     "typecheck": "tsc --noEmit",
     "lint": "eslint . --ext ts --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint --fix .",
-    "test": "NODE_ENV=test jest --coverage"
+    "test": "vitest"
   },
   "dependencies": {
     "glob": "^10.3.3",
